Clone incorporated with ignore state